Bug 698694 - Redundant options presented in operations on single files

https://bugzilla.gnome.org/show_bug.cgi?id=698694